--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Calendar.css">
+    <link rel="stylesheet" href="style.css">
     <title>Calendar</title>
     <h1>Calendar For 2025</h1>
     </head>
 <body>
 
     <div class="container mt-4">
-        <div class="calendar-container row" style="background-image: url(SLL.png);">
+        <div class="calendar-container row" style="background-image: url();">
             <div class="calendar-month col-md-4">
-                <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                <table class="table table-bordered calendar-table" style="background-image: url();">
                     <thead>
                         <tr>
                             <td colspan="7" class="month-title">JANUARY</td>
