--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </table>
             </div>
             <div class="calendar-month col-md-4">
-                <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                <table class="table table-bordered calendar-table" style="background-image: url();">
                     <thead>
                         <tr>
                             <td colspan="7" class="month-title">FEBRUARY</td>
@@ -152,7 +152,7 @@
                 </table>
             </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">MARCH</td>
@@ -226,7 +226,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">APRIL</td>
@@ -296,7 +296,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">MAY</td>
@@ -368,7 +368,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">JUNE</td>
@@ -435,7 +435,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">JULY</td>
@@ -505,7 +505,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">AUGUST</td>
@@ -578,7 +578,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">SEPTEMBER</td>
@@ -646,7 +646,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">OCTOBER</td>
@@ -717,7 +717,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">NOVEMBER</td>
@@ -790,7 +790,7 @@
                     </table>
                 </div>
                 <div class="calendar-month col-md-4">
-                    <table class="table table-bordered calendar-table" style="background-image: url(3F1.webp);">
+                    <table class="table table-bordered calendar-table" style="background-image: url();">
                         <thead>
                             <tr>
                                 <td colspan="7" class="month-title">DECEMBER</td>
